--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,5 @@ dashmap = "6"
 tracing = "0"
 tracing-subscriber = { version = "0", features = ["env-filter"] }
 md5 = "0.8.0"
+bytes = "1"
+base64 = "0"
